--- a/example/package.json
+++ b/example/package.json
@@ -13,9 +13,8 @@
         "cordova-android": "^7.1.4",
         "cordova-ios": "^5.0.0",
         "cordova-plugin-background-mode": "^0.7.2",
-        "cordova-plugin-background-mode-bluetooth-central": "^1.0.0",
         "cordova-plugin-device": "^2.0.2",
-        "cordova-plugin-nearbeeplugin": "file:../Plugin",
+        "cordova-plugin-nearbee": "file:../plugin",
         "cordova-plugin-whitelist": "^1.3.3",
         "cordova.plugins.diagnostic": "^4.0.12",
         "pulltorefreshjs": "^0.1.16"
@@ -23,12 +22,11 @@
     "cordova": {
         "plugins": {
             "cordova-plugin-whitelist": {},
-            "cordova-plugin-background-mode-bluetooth-central": {},
-            "cordova-plugin-nearbeeplugin": {},
             "cordova.plugins.diagnostic": {
                 "ANDROID_SUPPORT_VERSION": "28.+"
             },
-            "cordova-plugin-background-mode": {}
+            "cordova-plugin-background-mode": {},
+            "cordova-plugin-nearbee": {}
         },
         "platforms": [
             "ios",
