--- a/plugin/plugin.xml
+++ b/plugin/plugin.xml
@@ -44,7 +44,14 @@ id="cordova-plugin-nearbee" version="0.0.4">
                 <string>bluetooth-central</string>
             </array>
         </config-file>
-        <framework src="NearBee" type="podspec" spec="0.1.2" />
+        <podspec>
+        	<config>
+        		<source url="https://github.com/brightcove/BrightcoveSpecs.git" />
+        	</config>
+        	<pods use-frameworks="false">
+        		<pod name="NearBee" spec="0.1.3" />
+        	</pods>
+        </podspec>
         <header-file src="src/ios/NearbeePlugin.h" />
         <source-file src="src/ios/NearbeePlugin.m" />
     </platform>
