--- a/plugin/plugin.xml
+++ b/plugin/plugin.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
 xmlns:android="http://schemas.android.com/apk/res/android"
-id="cordova-plugin-nearbee" version="0.0.4">
+id="cordova-plugin-nearbee" version="0.0.7">
     <name>NearbeePlugin</name>
     <description>A Cordova plugin that allows users to receive notifications from beacons.</description>
     <keywords>cordova,android,nearbee,beacons,ios</keywords>
@@ -46,7 +46,7 @@ id="cordova-plugin-nearbee" version="0.0.4">
         </config-file>
         <podspec>
         	<config>
-        		<source url="https://github.com/brightcove/BrightcoveSpecs.git" />
+        		<source url="https://github.com/CocoaPods/Specs.git" />
         	</config>
         	<pods use-frameworks="false">
         		<pod name="NearBee" spec="0.1.3" />
