--- a/example/package.json
+++ b/example/package.json
@@ -10,7 +10,7 @@
     "author": "Apache Cordova Team",
     "license": "Apache-2.0",
     "dependencies": {
-        "cordova-android": "^8.0.0",
+        "cordova-ios": "^5.0.1",
         "cordova-plugin-device": "^2.0.2",
         "cordova-plugin-nearbee": "file:../plugin",
         "cordova-plugin-whitelist": "^1.3.3",
@@ -23,11 +23,10 @@
             "cordova.plugins.diagnostic": {
                 "ANDROID_SUPPORT_VERSION": "28.+"
             },
-            "cordova-plugin-background-mode": {},
-            "cordova-plugin-nearbee": {}
+            "cordova-plugin-nearbee": {},
+            "cordova-plugin-device": {}
         },
         "platforms": [
-            "android",
             "ios"
         ]
     }
